- fix installed modules detection (#34478)

Version 10.4.235 - 4 October 2007, by Thierry Vignaud

- diskdrake --fileshare
  o install nautilus-filesharing if nautilus is installed (#34262)
- finish-install: use translations for network step

Version 10.4.234 - 4 October 2007, by Olivier "blino" Blin

- finish-install: use translations for keyboard and 3D steps

Version 10.4.232 - 4 October 2007, by Olivier "blino" Blin

- add helper to get kernel module path (to be used in draklive)

Version 10.4.231 - 3 October 2007, by Nicolas Vigier

- wizards :
  o don't report a crash when an error prevent the wizard from
    running (#34371)

Version 10.4.230 - 3 October 2007, by Thierry Vignaud

- drakboot --boot:
  o if there is a /boot, check /boot instead of "/" to allow grub or not

Version 10.4.226 - 2 October 2007, by Thierry Vignaud

- drakauth:
  o install lib64sasl2-plug-gssapi on x86_64 (instead of libsasl2-plug-gssapi)
- draksec
  o make authentication items be aligned
- add ath5k module in wireless category

Version 10.4.225 - 1 October 2007, by Thierry Vignaud

- diskdrake:
  o bugfix 10.4.162: allow "LVM" on RAID (#34359)
  o improved wrapping of mount option descriptions (#19848)

Version 10.4.222 - 28 September 2007, by Olivier "blino" Blin

- allow interactive::gtk frontends to ask for a directory
- allow interactive::gtk frontends not to pop wait messages

Version 10.4.221 - 28 September 2007, by Olivier "blino" Blin

- add back ipw3945 module in wireless modules list
- allow to detect VirtualBox guest systems
- add acpi-cpufreq support for some Intel CPUs (family 6 model 15)
  (from Herton Ronaldo Krzesinski, #30208)

Version 10.4.217 - 27 September 2007, by Thierry Vignaud

- localedrake: 
  o allow to choose countries like "Angola" which have no locale (en_AO) in
    the "best" countries (alas it won't be remembered, will only be used in
    kde settings for now)
- finish-install:
  o display nicer HTML release notes rather than raw text version
