@@ -1,4 +1,6 @@
 - fix installed modules detection (#34478)
+- when checking dkms module packages, check that modules are either
+  available in urpmi media, or already installed (fix detection in live)
 
 Version 10.4.235 - 4 October 2007, by Thierry Vignaud
 
